Добавлено выпадающие меню

--- a/catalog.html
+++ b/catalog.html
@@ -83,16 +83,16 @@
           <li class="site-navigation-item">
             <a class="site-navigation-link header-catalog-button button-style" href="catalog.html">Каталог товаров</a>
 
-            <ul class="header-catalog reset-list visually-hidden">
+            <ul class="header-catalog-list reset-list">
               <li class="header-catalog-item">
                 <ul class="header-catalog-column first-column reset-list">
-                  <li class="first-column-item">
+                  <li class="column-item">
                     <a class="header-catalog-link" href="#">Виртуальная реальность</a>
                   </li>
-                  <li class="first-column-item">
+                  <li class="column-item">
                     <a class="header-catalog-link" href="#">Моноподы для cелфи</a>
                   </li>
-                  <li class="first-column-item">
+                  <li class="column-item">
                     <a class="header-catalog-link" href="#">Экшн-камеры</a>
                   </li>
                 </ul>
@@ -100,10 +100,10 @@
 
               <li class="header-catalog-item">
                 <ul class="header-catalog-column second-column reset-list">
-                  <li class="second-column-item">
+                  <li class="column-item">
                     <a class="header-catalog-link" href="#">Фитнес-браслеты</a>
                   </li>
-                  <li class="second-column-item">
+                  <li class="column-item">
                     <a class="header-catalog-link" href="#">Умные часы</a>
                   </li>
                 </ul>
@@ -111,7 +111,7 @@
 
               <li class="header-catalog-item third-column">
                 <ul class="header-catalog-column third-column reset-list">
-                  <li class="third-column-item">
+                  <li class="column-item">
                     <a class="header-catalog-link" href="#">Квадрокоптеры</a>
                   </li>
                 </ul>
@@ -272,49 +272,41 @@
           <h2 class="visually-hidden">Каталог отобранных товаров</h2>
           <ul class="catalog-list reset-list">
             <li class="catalog-item">
-              <img class="catalog-item-image image-style" src="images/product/product-1.jpg" width="360" height="380" alt="Селфи-палка любительского уровня.">
-              <div class="catalog-item-description">
-                <a class="catalog-item-link" href="#">
-                  <h3 class="catalog-item-title">Любительская<br> селфи-палка</h3>
-                </a>
+              <a class="catalog-item-link" href="#">
+                <img class="catalog-item-image image-style" src="images/product/product-1.jpg" width="360" height="380" alt="Селфи-палка любительского уровня.">
+                <h3 class="catalog-item-title">Любительская<br> селфи-палка</h3>
                 <p class="catalog-item-cost">500 ₽</p>
-              </div>
+              </a>
               <div class="catalog-button-wrapper">
                 <a class="button catalog-button" href="#">Подробнее</a>
               </div>
             </li>
             <li class="catalog-item">
-              <img class="catalog-item-image image-style" src="images/product/product-2.jpg" width="360" height="380" alt="Селфи-палка профессионального уровня.">
-              <div class="catalog-item-description">
-                <a class="catalog-item-link" href="#">
-                  <h3 class="catalog-item-title">Профессиональная селфи-палка</h3>
-                </a>
+              <a class="catalog-item-link" href="#">
+                <img class="catalog-item-image image-style" src="images/product/product-2.jpg" width="360" height="380" alt="Селфи-палка профессионального уровня.">
+                <h3 class="catalog-item-title">Профессиональная селфи-палка</h3>
                 <p class="catalog-item-cost">1 500 ₽</p>
-              </div>
+              </a>
               <div class="catalog-button-wrapper">
                 <a class="button catalog-button" href="#">Подробнее</a>
               </div>
             </li>
             <li class="catalog-item">
-              <img class="catalog-item-image image-style" src="images/product/product-3.jpg" width="360" height="380" alt="Селфи-палка для водных приключений.">
-              <div class="catalog-item-description">
-                <a class="catalog-item-link" href="#">
-                  <h3 class="catalog-item-title">Непотопляемая<br> селфи-палка</h3>
-                </a>
+              <a class="catalog-item-link" href="#">
+                <img class="catalog-item-image image-style" src="images/product/product-3.jpg" width="360" height="380" alt="Селфи-палка для водных приключений.">
+                <h3 class="catalog-item-title">Непотопляемая<br> селфи-палка</h3>
                 <p class="catalog-item-cost">2 500 ₽</p>
-              </div>
+              </a>
               <div class="catalog-button-wrapper">
                 <a class="button catalog-button" href="#">Подробнее</a>
               </div>
             </li>
             <li class="catalog-item">
-              <img class="catalog-item-image image-style" src="images/product/product-4.jpg" width="360" height="380" alt="Селфи-палка с рукой для оригинальных фото.">
-              <div class="catalog-item-description">
-                <a class="catalog-item-link" href="#">
-                  <h3 class="catalog-item-title">Селфи-палка «Следуй<br> за мной»</h3>
-                </a>
+              <a class="catalog-item-link" href="#">
+                <img class="catalog-item-image image-style" src="images/product/product-4.jpg" width="360" height="380" alt="Селфи-палка с рукой для оригинальных фото.">
+                <h3 class="catalog-item-title">Селфи-палка «Следуй<br> за мной»</h3>
                 <p class="catalog-item-cost">1 500 ₽</p>
-              </div>
+              </a>
               <div class="catalog-button-wrapper">
                 <a class="button catalog-button" href="#">Подробнее</a>
               </div>
