--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
           <li class="site-navigation-item">
             <a class="site-navigation-link header-catalog-button button-style" href="catalog.html">Каталог товаров</a>
 
-            <ul class="header-catalog reset-list visually-hidden">
+            <ul class="header-catalog-list reset-list">
               <li class="header-catalog-item">
                 <ul class="header-catalog-column first-column reset-list">
-                  <li class="first-column-item">
+                  <li class="column-item">
                     <a class="header-catalog-link" href="#">Виртуальная реальность</a>
                   </li>
-                  <li class="first-column-item">
+                  <li class="column-item">
                     <a class="header-catalog-link" href="#">Моноподы для cелфи</a>
                   </li>
-                  <li class="first-column-item">
+                  <li class="column-item">
                     <a class="header-catalog-link" href="#">Экшн-камеры</a>
                   </li>
                 </ul>
@@ -100,10 +100,10 @@
 
               <li class="header-catalog-item">
                 <ul class="header-catalog-column second-column reset-list">
-                  <li class="second-column-item">
+                  <li class="column-item">
                     <a class="header-catalog-link" href="#">Фитнес-браслеты</a>
                   </li>
-                  <li class="second-column-item">
+                  <li class="column-item">
                     <a class="header-catalog-link" href="#">Умные часы</a>
                   </li>
                 </ul>
@@ -111,7 +111,7 @@
 
               <li class="header-catalog-item third-column">
                 <ul class="header-catalog-column third-column reset-list">
-                  <li class="third-column-item">
+                  <li class="column-item">
                     <a class="header-catalog-link" href="#">Квадрокоптеры</a>
                   </li>
                 </ul>
