Исправляет скрытые элементы

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <li class="slide-item visually-hidden">
             <img class="slide-img image-style" src="images/product/fitness-bracelet.png" width="560" height="560" alt="Фитнес-браслет.">
             <div class="slide-item-description">
-              <p class="slide-slogan raleway-title">Худеем правильно!</p>
+              <p class="slide-slogan raleway-title">Худеем<br> правильно!</p>
               <p class="slide-text">Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.</p>
               <a class="button slide-button-more" href="#">Подробнее</a>
               <dl class="slide-description">
@@ -175,7 +175,7 @@
           <li class="slide-item visually-hidden">
             <img class="slide-img image-style" src="images/product/selfie-stick.png" width="560" height="560" alt="Монопод для селфи.">
             <div class="slide-item-description">
-              <p class="slide-slogan raleway-title">Делай селфи, как Бен Стиллер!</p>
+              <p class="slide-slogan raleway-title">Делай селфи,<br> как Бен Стиллер!</p>
               <p class="slide-text">Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.</p>
               <a class="button slide-button-more" href="#">Подробнее</a>
               <dl class="slide-description">
