--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                       <span class="cost-quantity">2000 ₽</span>
                     </p>
                   </div>
-                  <button class="card-button button-style" type="button">Открыть корзину</button>
+                  <a class="card-button button-style" href="#">Открыть корзину</a>
                 </div>
               </div>
             </li>
