Вносит правки по stylelint

--- a/catalog.html
+++ b/catalog.html
@@ -456,7 +456,7 @@
                 <span class="modal-tooltip">
                   <button class="modal-tooltip-button button-style" type="button" aria-labelledby="modal-tooltip-label">
                     <span class="visually-hidden">Показать дополнительную информацию</span>
-                    <svg class="delivery-tooltip-img" width="2" height="12" viewBox="0 0 2 12" fill="#000" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="modal-tooltip-img" width="2" height="12" viewBox="0 0 2 12" fill="#000" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                       <path d="M2 0H0v2h2V0ZM2 4H0v8h2V4Z"/>
                     </svg>
                   </button>
