--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Девайс</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
   </head>
 
   <body>
@@ -45,7 +47,7 @@
             <li class="catalog-menu-card">
               <a class="user-navigation-link" href="#">Корзина</a>
 
-              <div class="popover-cart popover-close">
+              <div class="popover-cart">
                 <div class="popover-content">
                   <ul class="card-list reset-list">
                     <li class="card-item">
@@ -417,7 +419,7 @@
       </div>
     </footer>
 
-    <div class="modal-container modal-close">
+    <div class="modal-container">
       <div class="modal modal-order">
         <button class="modal-close-button button-style">
           <span class="visually-hidden">Закрыть</span>
