--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Девайс</title>
     <link rel="stylesheet" href="style/style.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
   </head>
 
   <body>
@@ -45,7 +47,7 @@
             <li class="catalog-menu-card">
               <a class="user-navigation-link" href="#">Корзина</a>
 
-              <div class="popover-cart popover-close">
+              <div class="popover-cart">
                 <div class="popover-content">
                   <ul class="card-list reset-list">
                     <li class="card-item">
@@ -311,7 +313,9 @@
               <path d="M2 0H0v2h2V0ZM2 4H0v8h2V4Z"/>
             </svg>
           </button>
-          <span class="delivery-tooltip-text" id="delivery-tooltip-label" role="tooltip"></span>
+          <span class="delivery-tooltip-text" id="delivery-tooltip-label" role="tooltip">
+            <!-- сюда можно добавить дополнительную информацию по доставке товара, тогда она появится в тултипе -->
+          </span>
         </span>
       </div>
 
@@ -421,7 +425,7 @@
       </div>
     </footer>
 
-    <div class="modal-container modal-close">
+    <div class="modal-container">
       <div class="modal modal-order">
         <button class="modal-close-button button-style">
           <span class="visually-hidden">Закрыть</span>
