Исправляет не зачтенные критерии

--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
 
       <form class="header-search-form" action="https://echo.htmlacademy.ru/" method="get">
         <label class="search-form-label">
-          <span class="visually-hidden">Введите текс поиска</span>
+          <span class="visually-hidden">Введите текс поиска.</span>
           <input class="search-form-input" type="text" name="search-form-request" value="Текст поиска" placeholder="Поиск по сайту">
           <svg class="search-form-icon" width="16" height="17" fill="#000" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
             <path d="m15.7 14.6889-3.1-3.1c.9-1.2 1.4-2.59998 1.4-4.19998 0-3.9-3.1-7-7-7s-7 3.1-7 7c0 3.89998 3.1 6.99998 7 6.99998 1.6 0 3-.5 4.2-1.4l3.1 3.1c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.2-.1-.5-.3-.7ZM2 7.38892c0-2.8 2.2-5 5-5s5 2.2 5 5c0 2.79998-2.2 4.99998-5 4.99998s-5-2.2-5-4.99998Z"/>
@@ -56,7 +56,7 @@
                         <p class="card-title">Любительская<br> селфи-палка</p>
                       </a>
                       <button class="card-item-button button-style" type="button">
-                        <span class="visually-hidden">Удалить из корзины с товарами</span>
+                        <span class="visually-hidden">Удалить из корзины с товарами.</span>
                       </button>
                     </li>
                     <li class="card-item">
@@ -65,7 +65,7 @@
                         <p class="card-title">Профессиональная селфи-палка</p>
                       </a>
                       <button class="card-item-button button-style" type="button">
-                        <span class="visually-hidden">Удалить из корзины с товарами</span>
+                        <span class="visually-hidden">Удалить из корзины с товарами.</span>
                       </button>
                     </li>
                   </ul>
@@ -165,11 +165,11 @@
               <div class="cost">
                 <div class="cost-scale">
                   <button class="cost-scale-pin pin-min" type="button">
-                    <span class="visually-hidden">Изменение минимальной цены</span>
+                    <span class="visually-hidden">Изменение минимальной цены.</span>
                   </button>
                   <div class="cost-scale-level" style="left: 9px; width: 50%;"></div>
                   <button class="cost-scale-pin pin-max" type="button">
-                    <span class="visually-hidden">Изменение максимальной цены</span>
+                    <span class="visually-hidden">Изменение максимальной цены.</span>
                   </button>
                 </div>
                 <div class="cost-control">
@@ -254,7 +254,7 @@
           <h2 class="sort-title">Сортировка:</h2>
 
           <div class="select-wrapper">
-            <select class="sort-select" name="sort-select" aria-label="Сортировка">
+            <select class="sort-select" name="sort-select" aria-label="Сортировка.">
               <option value="popular">Популярные</option>
               <option value="cheap">Дешёвые</option>
               <option value="expensive">Дорогие</option>
@@ -263,16 +263,16 @@
 
           <ul class="sort-list reset-list">
             <li class="sort-item">
-              <button class="sort-button sort-button-top">
-                <span class="visually-hidden">По возрастанию</span>
+              <button class="sort-button sort-button-top" type="button">
+                <span class="visually-hidden">По возрастанию.</span>
                 <svg class="sort-icon" width="12" height="10" viewBox="0 0 12 10" fill="#000" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                   <path d="m6 0 5.5 10H.5"/>
                 </svg>
               </button>
             </li>
             <li class="sort-item">
-              <button class="sort-button sort-button-bottom">
-                <span class="visually-hidden">По убыванию</span>
+              <button class="sort-button sort-button-bottom" type="button">
+                <span class="visually-hidden">По убыванию.</span>
                 <svg class="sort-icon" width="12" height="10" viewBox="0 0 12 10" fill="#000" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                   <path d="M6 10 .5 0h11"/>
                 </svg>
@@ -282,7 +282,7 @@
         </section>
 
         <section class="catalog">
-          <h2 class="visually-hidden">Каталог отобранных товаров</h2>
+          <h2 class="visually-hidden">Каталог отобранных товаров.</h2>
           <ul class="catalog-list reset-list">
             <li class="catalog-item">
               <a class="catalog-item-link" href="#">
@@ -328,7 +328,7 @@
         </section>
 
         <section class="page-control">
-          <h2 class="visually-hidden">Управление отображением результатов поиска</h2>
+          <h2 class="visually-hidden">Управление отображением результатов поиска.</h2>
 
           <div class="page-control-button">
             <button class="control-button" type="button">Загрузить ещё</button>
@@ -364,7 +364,7 @@
     <footer class="main-footer">
       <div class="main-footer-wrappen page-container">
         <a class="footer-logo" href="index.html">
-          <img class="footer-logo-img image-style" src="images/device-footer-logo.svg" width="145" height="36" alt="Логотип сайта Девайс.">
+          <img class="footer-logo-img image-style" src="images/device-footer-logo.svg" width="145" height="36" alt="Логотип сайта интернет-магазин Девайс.">
         </a>
 
         <p class="footer-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -386,7 +386,7 @@
         <ul class="footer-social reset-list">
           <li class="footer-social-item">
             <a class="button-social button-social-facebook" href="https://www.facebook.com/htmlacademy/">
-              <span class="visually-hidden">Facebook</span>
+              <span class="visually-hidden">Facebook.</span>
               <svg class="social-icon facebook-icon" width="9" height="18" fill="#444" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                 <path d="M6.5 3H9V0H5.6C2.8 0 2 1.7 2 4.2V6H0v3h2v9h3V9h3.3l.6-3H5V4.5C5 3.7 5.3 3 6.5 3Z"/>
               </svg>
@@ -394,7 +394,7 @@
           </li>
           <li class="footer-social-item">
             <a class="button-social button-social-instagram" href="https://www.instagram.com/htmlacademy/">
-              <span class="visually-hidden">Instagram</span>
+              <span class="visually-hidden">Instagram.</span>
               <svg class="social-icon instagram-icon" width="16" height="16" fill="#444" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                 <path d="M8 10c1.10457 0 2-.89543 2-2s-.89543-2-2-2-2 .89543-2 2 .89543 2 2 2Z"/>
                 <path d="M14.7 1.3c-.9-.9-2-1.3-3.4-1.3H4.7C1.9 0 0 1.9 0 4.7v6.6c0 1.4.4 2.6 1.4 3.4.9.9 2 1.3 3.3 1.3h6.6c1.4 0 2.6-.4 3.4-1.3.8-.9 1.3-2 1.3-3.4V4.7c0-1.4-.4-2.6-1.3-3.4ZM8 12.1c-2.2 0-4.1-1.8-4.1-4.1S5.8 3.9 8 3.9c2.2 0 4.1 1.8 4.1 4.1s-1.9 4.1-4.1 4.1Zm4.6-7.4c-.7 0-1.3-.5-1.3-1.3s.5-1.3 1.3-1.3c.7 0 1.3.6 1.3 1.3 0 .7-.6 1.3-1.3 1.3Z"/>
@@ -403,7 +403,7 @@
           </li>
           <li class="footer-social-item">
             <a class="button-social button-social-twitter" href="https://twitter.com/htmlacademy_ru/">
-              <span class="visually-hidden">Twitter</span>
+              <span class="visually-hidden">Twitter.</span>
               <svg class="social-icon twitter-icon" width="15" height="15" fill="#444" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                 <path d="M9.7.15514c1.5-.5 2.6.3 3.2 1.1.5-.2 1.1-.4 1.7-.6 0 .8-.5 1.4-.8 1.6.7.2 1.2-.4 1.2-.4-.1.9-.9 1.7-1.4 1.9-.2 6.29996-2.8 10.39996-8.9 10.29996h-.4c-.3 0-3.7-.4-4.3-1.8 2 .2 3.4-.4 4.1-1.1-.8-.3-2.4-.4-2.6-2.79996.3.2.5.3 1.1.2-1.1-.8-2.3-1.5-2.2-3.5.3.3.9.5 1.2.4-.6-.2-1.8-3.1-.8-4.6 1.6 1.7 3.3 3.4 6.3 3.5.2-2.1 1-3.5 2.6-4.2Z"/>
               </svg>
@@ -421,8 +421,8 @@
 
     <div class="modal-container">
       <div class="modal modal-order">
-        <button class="modal-close-button button-style">
-          <span class="visually-hidden">Закрыть</span>
+        <button class="modal-close-button button-style" type="button">
+          <span class="visually-hidden">Закрыть.</span>
         </button>
 
         <section class="modal-content">
@@ -432,13 +432,13 @@
             <p class="order-form-row">
               <label class="input-wrapper order-form-name order-form-label">
                 <span class="order-form-title">Ваше имя:</span>
-                <input class="order-form-input input-name" type="text" name="order-form-name" placeholder="Введите имя">
+                <input class="order-form-input input-name" type="text" name="order-form-name" placeholder="Введите имя" required>
               </label>
 
               <span class="input-wrapper order-form-email">
                 <label class="order-form-label">
                   <span class="order-form-title">Ваш e-mail:</span>
-                  <input class="order-form-input input-email" type="email" name="order-form-email" placeholder="Введите e-mail" value="почта" aria-labelledby="input-messege-error">
+                  <input class="order-form-input input-email" type="email" name="order-form-email" placeholder="Введите e-mail" value="почта" aria-labelledby="input-messege-error" required>
                 </label>
                 <span class="order-form-text order-form-text-error" id="input-messege-error" aria-hidden="true">Забавный у вас адрес</span>
               </span>
@@ -447,7 +447,7 @@
             <p class="order-form-row">
               <label class="input-wrapper order-form-product order-form-label">
                 <span class="order-form-title">Что нужно привезти:</span>
-                <input class="order-form-input input-product" type="text" name="order-form-product" placeholder="В свободной форме">
+                <input class="order-form-input input-product" type="text" name="order-form-product" placeholder="В свободной форме" required>
               </label>
 
               <span class="input-wrapper order-form-quantity">
@@ -457,7 +457,7 @@
 
                 <span class="modal-tooltip">
                   <button class="modal-tooltip-button button-style" type="button" aria-labelledby="modal-tooltip-label">
-                    <span class="visually-hidden">Показать дополнительную информацию</span>
+                    <span class="visually-hidden">Показать дополнительную информацию.</span>
                     <svg class="modal-tooltip-img" width="2" height="12" viewBox="0 0 2 12" fill="#000" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                       <path d="M2 0H0v2h2V0ZM2 4H0v8h2V4Z"/>
                     </svg>
@@ -468,15 +468,15 @@
                 <input class="order-form-input input-quantity" id="input-quantity" type="number" name="order-form-quantity" value="1">
 
                 <button class="button-input button-remove button-style" type="button">
-                  <span class="visually-hidden">Убрать</span>
+                  <span class="visually-hidden">Убрать.</span>
                 </button>
                 <button class="button-input button-add button-style" type="button">
-                  <span class="visually-hidden">Добавить</span>
+                  <span class="visually-hidden">Добавить.</span>
                 </button>
               </span>
             </p>
 
-            <button class="button order-form-button">Отправить</button>
+            <button class="button order-form-button" type="submit">Отправить</button>
 
           </form>
         </section>
