--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <form class="header-search-form" action="https://echo.htmlacademy.ru/" method="get">
         <label class="search-form-label">
-          <span class="visually-hidden">Введите текс поиска</span>
+          <span class="visually-hidden">Введите текс поиска.</span>
           <input class="search-form-input" type="text" name="search-form-request" value="Текст поиска" placeholder="Поиск по сайту">
           <svg class="search-form-icon" width="16" height="17" fill="#000" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
             <path d="m15.7 14.6889-3.1-3.1c.9-1.2 1.4-2.59998 1.4-4.19998 0-3.9-3.1-7-7-7s-7 3.1-7 7c0 3.89998 3.1 6.99998 7 6.99998 1.6 0 3-.5 4.2-1.4l3.1 3.1c.2.2.4.3.7.3.6 0 1-.4 1-1 0-.2-.1-.5-.3-.7ZM2 7.38892c0-2.8 2.2-5 5-5s5 2.2 5 5c0 2.79998-2.2 4.99998-5 4.99998s-5-2.2-5-4.99998Z"/>
@@ -56,7 +56,7 @@
                         <p class="card-title">Любительская<br> селфи-палка</p>
                       </a>
                       <button class="card-item-button button-style" type="button">
-                        <span class="visually-hidden">Удалить из корзины с товарами</span>
+                        <span class="visually-hidden">Удалить из корзины с товарами.</span>
                       </button>
                     </li>
                     <li class="card-item">
@@ -65,7 +65,7 @@
                         <p class="card-title">Профессиональная селфи-палка</p>
                       </a>
                       <button class="card-item-button button-style" type="button">
-                        <span class="visually-hidden">Удалить из корзины с товарами</span>
+                        <span class="visually-hidden">Удалить из корзины с товарами.</span>
                       </button>
                     </li>
                   </ul>
@@ -139,10 +139,10 @@
     </header>
 
     <main class="main-index main-container">
-      <h1 class="visually-hidden">Интернет-магазин электроники Девайс</h1>
+      <h1 class="visually-hidden">Интернет-магазин электроники Девайс.</h1>
 
       <section class="slider page-container">
-        <h2 class="visually-hidden">Слайдер с промо-товарами</h2>
+        <h2 class="visually-hidden">Слайдер с промо-товарами.</h2>
 
         <ul class="slide-list reset-list">
           <li class="slide-item">
@@ -206,12 +206,12 @@
         <ul class="slider-control reset-list">
           <li class="slider-control-item">
             <button class="slider-control-button slider-prev button-style" type="button">
-              <span class="visually-hidden">Предыдущий слайд</span>
+              <span class="visually-hidden">Предыдущий слайд.</span>
             </button>
           </li>
           <li class="slider-control-item">
             <button class="slider-control-button slider-next button-style" type="button">
-              <span class="visually-hidden">Следующий слайд</span>
+              <span class="visually-hidden">Следующий слайд.</span>
             </button>
           </li>
         </ul>
@@ -219,24 +219,24 @@
         <ul class="slider-pagination reset-list">
           <li class="slider-pagination-item">
             <button class="slider-pagination-button slider-pagination-button-active" type="button">
-              <span class="visually-hidden">1й слайд</span>
+              <span class="visually-hidden">1й слайд.</span>
             </button>
           </li>
           <li class="slider-pagination-item">
             <button class="slider-pagination-button" type="button">
-              <span class="visually-hidden">2й слайд</span>
+              <span class="visually-hidden">2й слайд.</span>
             </button>
           </li>
           <li class="slider-pagination-item">
             <button class="slider-pagination-button" type="button">
-              <span class="visually-hidden">3й слайд</span>
+              <span class="visually-hidden">3й слайд.</span>
             </button>
           </li>
         </ul>
       </section>
 
       <section class="categories page-container">
-        <h2 class="visually-hidden">Популярные категории товаров</h2>
+        <h2 class="visually-hidden">Популярные категории товаров.</h2>
         <ul class="categories-list reset-list">
           <li class="categories-item">
             <a class="categories-item-link" href="#">
@@ -273,7 +273,7 @@
 
       <section class="advantages">
         <div class="advantages-container page-container">
-          <h2 class="visually-hidden">Преимущества</h2>
+          <h2 class="visually-hidden">Преимущества.</h2>
 
           <ul class="advantages-pagination reset-list">
             <li class="advantages-pagination-item advantages-pagination-active">
@@ -308,7 +308,7 @@
         <a class="delivery-button button-style" href="#">Доставим редкий товар под заказ</a>
         <span class="delivery-tooltip">
           <button class="delivery-tooltip-button button-style" type="button" aria-labelledby="delivery-tooltip-label">
-            <span class="visually-hidden">Информация о доставке</span>
+            <span class="visually-hidden">Информация о доставке.</span>
             <svg class="delivery-tooltip-img" width="2" height="12" viewBox="0 0 2 12" fill="#000" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
               <path d="M2 0H0v2h2V0ZM2 4H0v8h2V4Z"/>
             </svg>
@@ -357,7 +357,7 @@
           </div>
           <div class="subscribe-row">
             <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-              <label class="visually-hidden" for="email-input">Введите Ваш email</label>
+              <label class="visually-hidden" for="email-input">Введите Ваш email.</label>
               <input class="subscribe-form-input" id="email-input" type="email" name="subscribe-form-email" placeholder="Ваш e-mail">
               <button class="subscribe-form-button button-style" type="submit">Подписаться</button>
             </form>
@@ -370,7 +370,7 @@
     <footer class="main-footer">
       <div class="main-footer-wrappen page-container">
         <a class="footer-logo">
-          <img class="footer-logo-img image-style" src="images/device-footer-logo.svg" width="145" height="36" alt="Логотип сайта Девайс.">
+          <img class="footer-logo-img image-style" src="images/device-footer-logo.svg" width="145" height="36" alt="Логотип сайта интернет-магазин Девайс.">
         </a>
 
         <p class="footer-address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
@@ -392,7 +392,7 @@
         <ul class="footer-social reset-list">
           <li class="footer-social-item">
             <a class="button-social button-social-facebook" href="https://www.facebook.com/htmlacademy/">
-              <span class="visually-hidden">Facebook</span>
+              <span class="visually-hidden">Facebook.</span>
               <svg class="social-icon facebook-icon" width="9" height="18" fill="#444" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                 <path d="M6.5 3H9V0H5.6C2.8 0 2 1.7 2 4.2V6H0v3h2v9h3V9h3.3l.6-3H5V4.5C5 3.7 5.3 3 6.5 3Z"/>
               </svg>
@@ -400,7 +400,7 @@
           </li>
           <li class="footer-social-item">
             <a class="button-social button-social-instagram" href="https://www.instagram.com/htmlacademy/">
-              <span class="visually-hidden">Instagram</span>
+              <span class="visually-hidden">Instagram.</span>
               <svg class="social-icon instagram-icon" width="16" height="16" fill="#444" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                 <path d="M8 10c1.10457 0 2-.89543 2-2s-.89543-2-2-2-2 .89543-2 2 .89543 2 2 2Z"/>
                 <path d="M14.7 1.3c-.9-.9-2-1.3-3.4-1.3H4.7C1.9 0 0 1.9 0 4.7v6.6c0 1.4.4 2.6 1.4 3.4.9.9 2 1.3 3.3 1.3h6.6c1.4 0 2.6-.4 3.4-1.3.8-.9 1.3-2 1.3-3.4V4.7c0-1.4-.4-2.6-1.3-3.4ZM8 12.1c-2.2 0-4.1-1.8-4.1-4.1S5.8 3.9 8 3.9c2.2 0 4.1 1.8 4.1 4.1s-1.9 4.1-4.1 4.1Zm4.6-7.4c-.7 0-1.3-.5-1.3-1.3s.5-1.3 1.3-1.3c.7 0 1.3.6 1.3 1.3 0 .7-.6 1.3-1.3 1.3Z"/>
@@ -409,7 +409,7 @@
           </li>
           <li class="footer-social-item">
             <a class="button-social button-social-twitter" href="https://twitter.com/htmlacademy_ru/">
-              <span class="visually-hidden">Twitter</span>
+              <span class="visually-hidden">Twitter.</span>
               <svg class="social-icon twitter-icon" width="15" height="15" fill="#444" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                 <path d="M9.7.15514c1.5-.5 2.6.3 3.2 1.1.5-.2 1.1-.4 1.7-.6 0 .8-.5 1.4-.8 1.6.7.2 1.2-.4 1.2-.4-.1.9-.9 1.7-1.4 1.9-.2 6.29996-2.8 10.39996-8.9 10.29996h-.4c-.3 0-3.7-.4-4.3-1.8 2 .2 3.4-.4 4.1-1.1-.8-.3-2.4-.4-2.6-2.79996.3.2.5.3 1.1.2-1.1-.8-2.3-1.5-2.2-3.5.3.3.9.5 1.2.4-.6-.2-1.8-3.1-.8-4.6 1.6 1.7 3.3 3.4 6.3 3.5.2-2.1 1-3.5 2.6-4.2Z"/>
               </svg>
@@ -427,8 +427,8 @@
 
     <div class="modal-container">
       <div class="modal modal-order">
-        <button class="modal-close-button button-style">
-          <span class="visually-hidden">Закрыть</span>
+        <button class="modal-close-button button-style" type="button">
+          <span class="visually-hidden">Закрыть.</span>
         </button>
 
         <section class="modal-content">
@@ -438,13 +438,13 @@
             <p class="order-form-row">
               <label class="input-wrapper order-form-name order-form-label">
                 <span class="order-form-title">Ваше имя:</span>
-                <input class="order-form-input input-name" type="text" name="order-form-name" placeholder="Введите имя">
+                <input class="order-form-input input-name" type="text" name="order-form-name" placeholder="Введите имя" required>
               </label>
 
               <span class="input-wrapper order-form-email">
                 <label class="order-form-label">
                   <span class="order-form-title">Ваш e-mail:</span>
-                  <input class="order-form-input input-email" type="email" name="order-form-email" placeholder="Введите e-mail" value="почта" aria-labelledby="input-messege-error">
+                  <input class="order-form-input input-email" type="email" name="order-form-email" placeholder="Введите e-mail" value="почта" aria-labelledby="input-messege-error" required>
                 </label>
                 <span class="order-form-text order-form-text-error" id="input-messege-error" aria-hidden="true">Забавный у вас адрес</span>
               </span>
@@ -453,7 +453,7 @@
             <p class="order-form-row">
               <label class="input-wrapper order-form-product order-form-label">
                 <span class="order-form-title">Что нужно привезти:</span>
-                <input class="order-form-input input-product" type="text" name="order-form-product" placeholder="В свободной форме">
+                <input class="order-form-input input-product" type="text" name="order-form-product" placeholder="В свободной форме" required>
               </label>
 
               <span class="input-wrapper order-form-quantity">
@@ -463,7 +463,7 @@
 
                 <span class="modal-tooltip">
                   <button class="modal-tooltip-button button-style" type="button" aria-labelledby="modal-tooltip-label">
-                    <span class="visually-hidden">Показать дополнительную информацию</span>
+                    <span class="visually-hidden">Показать дополнительную информацию.</span>
                     <svg class="modal-tooltip-img" width="2" height="12" viewBox="0 0 2 12" fill="#000" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
                       <path d="M2 0H0v2h2V0ZM2 4H0v8h2V4Z"/>
                     </svg>
@@ -474,15 +474,15 @@
                 <input class="order-form-input input-quantity" id="input-quantity" type="number" name="order-form-quantity" value="1">
 
                 <button class="button-input button-remove button-style" type="button">
-                  <span class="visually-hidden">Убрать</span>
+                  <span class="visually-hidden">Убрать.</span>
                 </button>
                 <button class="button-input button-add button-style" type="button">
-                  <span class="visually-hidden">Добавить</span>
+                  <span class="visually-hidden">Добавить.</span>
                 </button>
               </span>
             </p>
 
-            <button class="button order-form-button">Отправить</button>
+            <button class="button order-form-button" type="submit">Отправить</button>
 
           </form>
         </section>
